tests/ui/dyn-star/feature-gate-dyn_star.stderr
error[E0658]: `dyn*` trait objects are experimental
  --> $DIR/feature-gate-dyn_star.rs:5:31
   |
LL | pub fn dyn_star_parameter(_: &dyn* Send) {
   |                               ^^^^
   |
   = note: see issue #102425 <https://github.com/crablang/crablang/issues/102425> for more information
   = help: add `#![feature(dyn_star)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
